--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -16,15 +16,17 @@
 
         <div class="main">
             <div class="welcome">
-                Welcome,<%= user.username %>
-                    <div class="Total">
-                        <% var total=0; %>
-                            <% cart.forEach(element=> { %>
-                                <% total +=element.product.price * element.quantity; %>
-                                    <% }); %>
-                                        <a>Total Items: <%= cart.length %></a>
-                                        <a href="/checkout/<%= user._id  %>">Checkout: $<%= total %></a>
-                    </div>
+                <div class="welcome-message">
+                    Welcome, <%= user.username %>
+                </div>
+                <div class="Total">
+                    <% var total=0; %>
+                        <% cart.forEach(element=> { %>
+                            <% total +=element.product.price * element.quantity; %>
+                                <% }); %>
+                                    <a>Total Items: <%= cart.length %></a>
+                                    <a class="checkout" href="/checkout/<%= user._id  %>">Checkout: $<%= total %></a>
+                </div>
             </div>
 
             <div class="cart-container">
@@ -40,7 +42,7 @@
 
                         <div class="cart-item">
                             <div class="cart-item-child-1 cart-item-child">
-                                <div>
+                                <div class="product-img">
                                     <img src=<%=element.product.imageUrl%>
                                     alt="">
                                 </div>
@@ -67,7 +69,7 @@
                             </div>
 
                             <div class="cart-item-child">
-                                Delivery
+                               Cash On Delivery
                             </div>
 
                             <div class="cart-item-child">
@@ -77,7 +79,7 @@
                         <% }); %>
                             <% } else{%>
                                 <br>
-                                <p>No items in the cart</p>
+                                <p class="empty-cart">Your Cart is Empty.</p>
 
                                 <%} %>
                                     %>
