--- a/views/checkout/index.ejs
+++ b/views/checkout/index.ejs
@@ -3,50 +3,94 @@
 <html>
 
 <head>
-    <title>Checkout Bill</title>
+    <title>Invoice</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/checkout.css">
+    <link rel="stylesheet" href="/css/base.css">
+
 </head>
 
 <body>
-    <div>
-        <a href="/">Back to Products</a>
-        <h1>Checkout Bill</h1>
-        <table>
-            <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Quantity</th>
-                    <th>Price/unit</th>
-                    <th>Subtotal</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% let total=0; %>
-                    <% for (const item of items) { %>
+    <%- include('../partials/nav') %>
+        <div class="main">
+            <a href="/"><i class="fa-solid fa-arrow-left"></i></a>
+            <div id="invoiceContent">
+                <p class="invoice">INVOICE</p>
+                <table>
+                    <thead>
                         <tr>
-                            <td>
-                                <%= item.product.name %>
-                            </td>
-                            <td>
-                                <%= item.quantity %>
-                            </td>
-                            <td>$<%= item.product.price.toFixed(2) %>
-                            </td>
-                            <td>$<%= (item.quantity * item.product.price).toFixed(2) %>
-                            </td>
-                            <% total +=item.quantity * item.product.price; %>
+                            <th>Product Name</th>
+                            <th>Quantity</th>
+                            <th>Price/unit</th>
+                            <th>Subtotal</th>
                         </tr>
-                        <% } %>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">Total</td>
-                    <td class="total">$<%= total.toFixed(2) %>
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-    </div>
+                    </thead>
+                    <tbody>
+                        <% let total=0; %>
+                            <% for (const item of items) { %>
+                                <tr>
+                                    <td class="item-name">
+                                        <%= item.product.name %>
+                                    </td>
+                                    <td>
+                                        <%= item.quantity %>
+                                    </td>
+                                    <td>$<%= item.product.price.toFixed(2) %>
+                                    </td>
+                                    <td>$<%= (item.quantity * item.product.price).toFixed(2) %>
+                                    </td>
+                                    <% total +=item.quantity * item.product.price; %>
+                                </tr>
+                                <% } %>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="3">Total</td>
+                            <td class="total">$<%= total.toFixed(2) %>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+
+            <div class="download">
+                <button onclick="printScreen()"><i class="fa-solid fa-download"></i>Download Invoice</button>
+            </div>
+        </div>
+
+        <%- include('../partials/nav') %>
+
+            <script>
+                function printScreen() {
+                    var invoiceContent = document.getElementById('invoiceContent');
+
+                    if (invoiceContent) {
+                        if (invoiceContent.innerHTML.trim() !== '') {
+                            var printWindow = window.open('', '_blank');
+                            printWindow.document.write('<html><head><title>Print</title></head><body>');
+                            printWindow.document.write('<style>');
+                            printWindow.document.write('.invoice { width: 100%; margin-bottom: 2rem; font-size: 1.5rem; text-align: center; }');
+                            printWindow.document.write('table { width: 100%; border-collapse: collapse; margin-bottom: 2rem; border-radius: 0.5rem; }');
+                            printWindow.document.write('th, td { border: 1px solid #D5D9D9; padding: 8px; text-align: center; }');
+                            printWindow.document.write('th { background-color: #D5D9D9; }');
+                            printWindow.document.write('tfoot th { text-align: right; }');
+                            printWindow.document.write('tfoot td { font-weight: bold; }');
+                            printWindow.document.write('.total { text-align: center; }');
+                            printWindow.document.write('</style></head><body>');
+                            printWindow.document.write(invoiceContent.innerHTML);
+                            printWindow.document.write('</body></html>');
+                            printWindow.document.close();
+                            printWindow.print();
+                        } else {
+                            console.error('Element with id "invoiceContent" is empty.');
+                        }
+                    } else {
+                        console.error('Element with id "invoiceContent" not found.');
+                    }
+                }
+            </script>
 </body>
 
 </html>
