--- a/views/orderHistory/index.ejs
+++ b/views/orderHistory/index.ejs
@@ -1,5 +1,3 @@
-<!-- orderHistory/index.ejs -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,16 +5,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/orderHistory.css" />
     <title>Order History</title>
 </head>
 
 <body>
-    <h1>Order History for <%= user.username %>
-    </h1>
 
-    <p>
-        <%=orderHistory %>
-    </p>
+    <%- include('../partials/nav') %>
+
+
+
+        <div class="main">
+            <div class="welcome">
+                Welcome,
+                <%= user.username %>
+            </div>
+
+            <% if(orderHistory.length==0){ %>
+                <div class="no-orders">
+                    <div class="no-orders-child-1">
+                        <div class="message">
+                            You have no orders
+                        </div>
+                        <div class="go-back">
+                            <a href="/">Continue Shopping</a>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+                    <div class="orders">
+                        <% orderHistory.forEach((items, orderIndex)=> { %>
+                            <div class="order">
+                                <div class="order-details">
+                                    <div class="order-details-child-1">
+                                        <div class="order-details-child-1-child-1">
+                                            <div>
+                                                ORDER PLACED
+                                            </div>
+                                            <div>
+                                                <% const dbTime=items.createdAt %>
+                                                    <% const options={ year: 'numeric' , month: 'long' , day: 'numeric'
+                                                        }; formattedTime=dbTime.toLocaleDateString('en-US', options); %>
+
+                                                        <%= formattedTime %>
+                                            </div>
+                                        </div>
+                                        <div class="order-details-child-1-child-3">
+                                            <div>
+                                                TOTAL
+                                            </div>
+
+
+                                                <% let total=0; %>
+
+                                                    <% items.products.forEach((item, itemIndex)=> { %>
+                                                        <% total +=item.price * items.productQuantity[itemIndex]; %>
+                                                            <% }) %>
+
+                                                                <div>
+                                                                    ₹<%= total %>
+                                                                </div>
+
+
+
+
+                                        </div>
+                                        <div class="order-details-child-1-child-2">
+                                            <div>ORDER </div>
+                                            <div>
+                                                #<%= items._id %>
+                                            </div>
+                                        </div>
+
+
+
+                                    </div>
+                                </div>
+                                <div class="product-desc-container">
+                                    <div class="carousel-container">
+                                        <div class="carousel">
+                                            <% items.products.forEach((item, itemIndex)=> { %>
+                                                <div class="carousel-item">
+                                                    <img src="<%= item.imageUrl %>" alt="">
+                                                </div>
+                                                <% }) %>
+                                        </div>
+
+                                        <div class="navigation-indicators"></div>
+                                    </div>
+
+                                    <div class="items">
+
+                                        <% if (items.products.length <=1) { %>
+                                            <% items.products.forEach(singleItem=> { %>
+                                                <%= singleItem.name %>
+                                                    <% }) %>
+                                                        <% } else { %>
+                                                            <%= items.products[0].name %> and <%= items.products.length
+                                                                    - 1 %>
+                                                                    other item(s)
+                                                                    <% } %>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                            <% }); %>
+                    </div>
+        </div>
+
+        <%- include('../partials/footer') %>
+
+
+            <script src="/Js/orderHistory.js"></script>
+
 
 </body>
 
