--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 <footer>
     <div class="footer">
         <div class="footer-left">
-            <h1>Explore Our Collection</h1>
+            <h1>ShopSphere</h1>
+            <p><b>Explore Our Collection</b></p>
             <p>Discover a wide range of premium headphones and audio accessories. From wireless earbuds to
                 over-ear
                 headphones, we have the perfect audio solution for your needs. Immerse yourself in high-quality
