--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/new.css" />
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -15,21 +15,21 @@
         rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/css/new.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
 </head>
 
 <body>
     <%- include('../partials/nav') %>
-        <div class="back-button">
-            <a href="/"><i class="fa-solid fa-chevron-left"></i> &nbsp;Back</a>
+        <div class="heading">
+            <p>Add a New Product</p>
         </div>
-        <h1 class="heading">Add a New Product</h1>
 
         <div class="form-container">
             <form method="post" action="/products" novalidate class="validated-form">
                 <div class=" mb-3">
-                    <label for="product-name" class="form-label">Product Name</label>
-                    <input type="text" class="form-control" id="product-name" required name="product[name]">
+                    <input type="text" class="form-control" id="product-name" required name="product[name]"
+                        placeholder="Product Name">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -40,8 +40,8 @@
 
 
                 <div class="mb-3">
-                    <label for="product-category" class="form-label">Product Category</label>
-                    <input type="text" class="form-control" id="product-category" required name="product[category]">
+                    <input type="text" class="form-control" id="product-category" required name="product[category]"
+                        placeholder="Product Category">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -52,8 +52,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="product-quantity" class="form-label">Product Quantity</label>
-                    <input type="text" class="form-control" id="product-quantity" required name="product[quantity]">
+                    <input type="text" class="form-control" id="product-quantity" required name="product[quantity]"
+                        placeholder="Product Quantity">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -64,8 +64,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="product-desc" class="form-label">Product Description</label>
-                    <input type="text" class="form-control" id="product-desc" required name="product[description]">
+                    <input type="text" class="form-control" id="product-desc" required name="product[description]"
+                        placeholder="Product Description">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -76,8 +76,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="product-price" class="form-label">Product Price</label>
-                    <input type="number" class="form-control" id="product-price" required name="product[price]">
+                    <input type="number" class="form-control" id="product-price" required name="product[price]"
+                        placeholder="Product Price">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
@@ -88,8 +88,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="product-img" class="form-label">Product Image</label>
-                    <input type="text" class="form-control" id="product-img" required name="product[imageUrl]">
+                    <input type="text" class="form-control" id="product-img" required name="product[imageUrl]"
+                        placeholder="Product Image">
                     <div class="valid-feedback">
                         Looks Good!
                     </div>
