--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -27,6 +27,7 @@
     width: 100%;
 }
 
+
 .product {
     min-width: 230px;
     width: 23%;
@@ -37,6 +38,25 @@
     align-items: center;
     cursor: pointer;
 
+}
+
+.fav{
+    width: 100%;
+    height: 100%;
+    background-color: #F7F7F7;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.fav>i{
+    font-size: 1rem;
+    color: #000000;
+    padding: 0.5rem;
+    cursor: pointer;
+}
+
+.fav-red{
+    color: red !important;
 }
 
 .product-img {
@@ -197,6 +217,50 @@
     }
 
 }
+
+form {
+    width: 30%;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form>select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 0.8rem;
+    font-weight: 300;
+    color: #5b5b5b;
+}
+
+.cart-btn {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+
+
+
+
+.cart-btn>img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    mix-blend-mode: multiply;
+}
+
 
 
 @media screen and (max-width: 750px) {
